Rewrite records to classes